Se agrega el controlador del pivote para los datos por origen